# CapDraft-TTS

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CapDraft-TTS.spec  README.md  build-release.ps1  capcut_tts.py  config.example.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
core/: __init__.py  cache.py  capcut_tts.py  config.py  i18n.py  logger.py  preferences.py
core/capcut_project/: __init__.py  capcut_process.py  draft_patcher.py  draft_reader.py  models.py  native_audio_alignment.py  paths.py  project_exporter.py  project_split.py  srt_exporter.py  tts_project_service.py  validator.py  video_merge.py  voice_catalog.py  voice_catalog_updater.py
docs/: README.ja.md  README.vi.md  README.zh.md
tests/: test_core.py  test_i18n.py  test_perf_hotpaths.py  test_reliability.py  test_settings.py  test_split_merge.py
ui/: caption_table_model.py  main_window.py  settings_dialog.py
