[project]
name = "capdraft-tts"
version = "1.2.0"
description = "Generate CapCut TTS audio from project captions and attach it to the draft timeline."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "PySide6>=6.5",
    "PySide6-Fluent-Widgets>=1.7",
    "requests>=2.28",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21",
]

[tool.uv]
package = false
